welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:3: error: reassignment to val
  if (versLavant=true){
                ^